[package]

	name = "btrfs2"
	description = "Interface for BTRFS ioctls etc | fork of the btrfs-crate containing fixes. Intent to yank crate once fixes are accepted upstream!"
	license = "MIT"

	version = "1.2.2"

	authors = [
		"James Pharaoh <james@wellbehavedsoftware.com>",
	]

	include = [
		"src/**/*.rs",
		"Cargo.toml",
		"README.md",
	]

[dependencies]

	crc = "1.4"
	flate2 = "0.2"
	nix = "0.8.1"
	lazy_static = "0.2"
	libc = "0.2"
	minilzo = "0.1"
	uuid = "0.3"

# noet ts=4 filetype=toml
